[bumpversion]
current_version = 0.0.7
commit = True
tag = True

[metadata]
name = handson
version = 0.0.5
author = Nathan Cutler
author-email = ncutler@suse.com
description = Automatically deploy Ceph clusters for hands-on demonstrations.
description-file = README.rst
license = BSD 3 Clause
classifiers = Development Status :: 4 - Beta
	Operating System :: POSIX :: Linux
	Programming Language :: Python

[bumpversion:file:setup.cfg]

[files]
scripts = bin/ho
packages = handson

[global]
setup-hooks = pbr.hooks.setup_hook

