[metadata]
name = handson
version = 0.1.2
author = Nathan Cutler
author-email = ncutler@suse.com
description = Automatically deploy Ceph clusters for hands-on demonstrations.
description-file = README.rst
license = BSD 3 Clause
classifiers = Development Status :: 4 - Beta
	Operating System :: POSIX :: Linux
	Programming Language :: Python

[files]
scripts = bin/ho
packages = handson

[global]
setup-hooks = pbr.hooks.setup_hook

